Created username click listener.

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -92,4 +92,5 @@ form input[type=text] {
     background-color: rgba(0, 255, 221, 0.2);
     padding: 10px;
     border-radius: 10px;
+    margin-bottom: 10px
 }
