--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -2,30 +2,40 @@ body {
     background-image: url("https://images2.alphacoders.com/774/774372.jpg");
     text-align: center;
     padding: 0 25px;
-    font-family: arial, sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 h1 {
     font-family: 'Charmonman', cursive;
     margin-left: -40px;
-    color: rgba(0, 255, 221, 0.45)
+    color: rgba(0, 255, 221, 0.65)
 }
 
 #main, #chats {
     background-image: url("https://image.freepik.com/free-vector/grey-abstract-background_1077-4.jpg");
     width: 500px;
-    margin: auto;
     text-align: left;
     padding: 50px 60px;
     border: solid #ddd;
     border-width: 0 1px 1px 1px;
     border-radius: 25px;
+    box-shadow: 0 0 15px 10px rgb(112, 112, 112);
 }
 
+#main {
+    position: relative;
+    top: 10px;
+}
+
+#chats {
+    margin: auto;
+    position: relative;
+    top: 75px;
+}
 #main h1 {
-    margin-top: 0;
+    margin-top: -15px;
     font-size: 35px;
-    margin-bottom: 5px;
+    margin-bottom: 55px;
     padding: 5px;
 }
 
@@ -103,8 +113,48 @@ form input[type=text] {
 }
 
 .messageBox {
-    background-color: rgba(0, 255, 221, 0.2);
+    background-color: rgba(0, 255, 221, 0.4);
     padding: 10px;
     border-radius: 10px;
-    margin-bottom: 10px
+    margin-bottom: 25px;
+    box-shadow: 0 0 15px 10px rgba(0, 255, 221, 0.8);
+}
+
+#profileBox {
+    position: relative;
+    
+}
+
+#profilePic {
+    float: right;
+    position: relative;
+    left: 25px;
+    bottom: 25px;
+    height: 15%;
+    width: 15%;
+    border-radius: 50%;
+}
+
+#profileMessages, #profileFriends {
+    color: rgba(0, 255, 221, 0.8);
+    font-size: 14px;
+    float: right;
+    position: relative;
+    top: 10px;
+    left: 90px;
+    margin-right: 10px;
+}
+
+#numProfileMessages, #numProfileFriends {
+    font-size: 12px;
+}
+
+#profileUsername {
+    font-size: 20px;
+    float: right;
+    position: relative;
+    left: 15px;
+    bottom: 15px;
+    color: rgba(0, 255, 221, 1);
+    font-weight: bold;
 }
